--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -473,20 +473,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot ACF and PACF using Plotly\n",
+    "# Plot hourly_cnt and hourly_diff ACF and PACF using Plotly\n",
     "\n",
-    "plot_acf_pacf_plotly(hourly_cnt, lags=72)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot ACF and PACF using Plotly\n",
-    "\n",
-    "plot_acf_pacf_plotly(hourly_diff, lags=72)\n"
+    "plot_acf_pacf_plotly(hourly_cnt, lags=72)\n",
+    "plot_acf_pacf_plotly(hourly_diff, lags=72)"
    ]
   },
   {
@@ -497,7 +487,7 @@
     "- Rolling average model (Look back 1 to 7 weeks (same day and hour))\n",
     "- Arima model, applied 24 hours seasonal differencing and (p, d, q)=(2, 0, 3)\n",
     "- Xgboost model with lag_24, lag_48, lag_168.\n",
-    "- Test period (\"2012-08-01\", \"2012-08-07\") and (\"2012-12-25\", \"2012-12-31\")(only for save time, not a fair comparison)"
+    "- Test period (\"2012-08-01\", \"2012-08-07\") and (\"2012-12-25\", \"2012-12-31\")(only for save time purpose, not a fair comparison)"
    ]
   },
   {
@@ -692,17 +682,6 @@
     "    legend_title_text='Model',\n",
     "    height=400\n",
     ")\n",
-    "# Update x-axis to show dates properly\n",
-    "fig_daily_mae.update_traces(marker=dict(size=5))\n",
-    "# fig_daily_mae.update_layout(\n",
-    "#     xaxis_title=\"Date\",\n",
-    "#     yaxis_title=\"MAE\",\n",
-    "#     xaxis_tickangle=-45,\n",
-    "#     xaxis_tickmode='array',\n",
-    "#     xaxis_tickvals=list(daily_maes.keys()),\n",
-    "#     xaxis_ticktext=[str(date) for date in daily_maes.keys()],\n",
-    "#     height=400\n",
-    "# )\n",
     "fig_daily_mae.show()"
    ]
   },
